# zt

./: .gitignore  CHANGES.md  COMPILER-ROADMAP.md  FORTH-ROADMAP.md  FORTH-TEST-INTEGRATION.md  FORTH_TEST_INTEGRATION.md  Makefile  NOTES-native-control-flow.md  PLAN.md  README.md  conftest.py  pyproject.toml  sim.py
docs/: 128k-architecture.md  128k.md  COMPILER-ROADMAP.md  FORTH-ROADMAP.md  FORTH-TEST-INTEGRATION.md  NOTES-native-control-flow.md  PLAN.md  asm-words.md  cli-2.md  forth-style.md  getting-started.md  im2-architecture.md  literate-style.md  primitives.md  zlm-optimization-notes.md
examples/: asm-primitives-demo.fs  asm-primitives.fs  hello.fs  im2-rainbow.fs  sierpinski-2.fs  sierpinski-3.fs  sierpinski.fs
stdlib/: core.fs  test-lib.fs
tests/: conftest.py  forth_runner.py  test_2bit_dot_plus_store.py  test_2bit_muladd.py  test_arith.fs  test_array.fs  test_array_hof.fs  test_array_literals.py  test_asm.py  test_asm_vocab.py  test_asm_words.py  test_asm_words_build.py  test_ay.fs  test_ay.py  test_beep.py  test_bit.fs  test_blob_registry.py  test_brace_dispatch.py  test_build_tree_shaken.py  test_case_immediate.py  test_cli.py  test_cli_128k.py  test_cli_48k_bank_drop.py  test_cli_test.py  test_code_emitter.py  test_compiler.py  test_compiler_banking.py  test_compiler_blob_registry.py  test_compiler_ir.py  test_constants_in_interpret_state.py  test_control_stack.py  test_controlflow.py  test_dictionary.py  test_double_colon.py  test_emit_blob.py  test_examples_asm_primitives.py  test_examples_bank_rotator.py  test_examples_bank_table.py  (+110 more)
(+249 files in other folders)
