[project]
name = "zt"
version = "0.1.0"
description = "Z80 Forth cross-compiler"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
]

[project.scripts]
zt = "zt.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
]

[tool.pytest.ini_options]
testpaths = ["tests", "examples"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
